--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -14,23 +14,25 @@
 .container h1 {
     text-align: center;
     font-size: 50px;
-    color: #70148b;
+    color: #9639b2;
     text-transform: uppercase;
     letter-spacing: 2px;
+   
 }
 
 .subcontainer {
-    border: 2px solid rgb(129, 11, 184);
+    background-color: #400c50f0;
+    border: 5px solid rgb(64, 53, 53);
     padding: 50px;
     display: flex;
     border-radius: 50px;
     align-items: center;
     flex-direction: row;
-    width: 100%;
+    width: 50%;
     gap: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    transition: background 0.5s, transform 0.3s, opacity 0.5s, transform 0.5s;
+    transition: background 0.3s, transform 0.3s, opacity 0.5s, transform 0.5s;
     opacity: 0; /* Initially hidden */
     transform: translateY(50px); /* Initially positioned below */
 }
