--- a/src/Components/Tech/Tech.css
+++ b/src/Components/Tech/Tech.css
@@ -25,7 +25,7 @@
     justify-content: center;
     padding: 20px;
     background-color: #350b34;
-    border-radius: 100%;
+    border-radius: 80px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
@@ -49,7 +49,7 @@
   .tech-section h2{
     text-align: center;
     font-size: 50px;
-    color: #70148b;
+    color: #9639b2;
     text-transform: uppercase;
     letter-spacing: 2px;
   }
