--- a/src/Components/Education/Education.css
+++ b/src/Components/Education/Education.css
@@ -4,7 +4,6 @@
     flex-direction: column;
     gap: 50px;
     padding: 40px;
-    background-color: #000000;
     border-radius: 10px;
     margin: 20px auto;
     width: 80%;
@@ -14,7 +13,7 @@
 .container h1 {
     text-align: center;
     font-size: 50px;
-    color: #9639b2;
+    color: #ffffff;
     text-transform: uppercase;
     letter-spacing: 2px;
    
