--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
 body{
     height: 100vh;
-    background: black;
+    background: rgb(12, 1, 18);
+    background-image: url(https://i.pinimg.com/originals/8e/46/15/8e46150f790fbefe438d9c2767c32ad1.gif);
     color: white;
     font-family: 'outfit';
 
