--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,24 +1,34 @@
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 20px 170px;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 170px;
 }
-.nav-menu{
-    display: flex;
-    align-items: center;
-    list-style: none;
-    gap: 60px;
-    font-size: 20px;
+.nav-menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 60px;
+  font-size: 20px;
 }
-.nav-connect{
-    padding: 20px 40px;
-    border-radius: 50px;
-    background: linear-gradient(267deg,rgb(112, 14, 139),rgb(148, 11, 111));
-    font-size: 22px;
-    cursor: pointer;
-    transition: 0.5s;
+.nav-connect {
+  padding: 20px 40px;
+  border-radius: 50px;
+  background: linear-gradient(267deg, rgb(112, 14, 139), rgb(148, 11, 111));
+  font-size: 22px;
+  cursor: pointer;
+  transition: 0.5s;
 }
-.nav-connect:hover{
-    transform: scale(1.05);
+.nav-connect:hover {
+  transform: scale(1.05);
+}
+
+.link {
+  color: white;
+  text-decoration: none; /* Remove underline */
+  font-size: 18px;
+}
+
+.link:hover {
+  color: rgb(127, 104, 136);
 }
