--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 40px;
     padding: 40px;
     border-radius: 10px;
     margin: 20px auto;
     width: 80%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* height: 100vh; */
+    padding: 2rem;
   }
   
   .contact-section h2 {
@@ -21,6 +23,7 @@
   .contact-form {
     width: 100%;
     max-width: 500px; /* Limit form width for better readability */
+   
   }
   
   .contact-form label {
@@ -54,5 +57,6 @@
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-top: 0.5cm;
   }
   
